--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h2 class="text-3xl font-bold underline bg-amber-500"> Testing html {{title}} </h2>
+<app-header></app-header>
+
+<div class="container mt-6">
+    <ul>
+        @for (product of products; track product.id) {
+            <li>{{product.name}}</li>
+        }   
+    </ul>
+</div>
