--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,5 @@
 <app-header></app-header>
 
-<div class="container mt-6">
-    <ul>
-        @for (product of products; track product.id) {
-            <li>{{product.name}}</li>
-        }   
-    </ul>
+<div class="w-full min-h-screen mt-6 px-6">
+    <router-outlet></router-outlet>
 </div>
