--- a/client/src/app/features/shop/product-details/product-details.component.html
+++ b/client/src/app/features/shop/product-details/product-details.component.html
@@ -8,6 +8,8 @@
     <div class="flex flex-col md:w-1/2 justify-start">
       <h1 class="text-3xl font-semibold text-gray-900">{{product.name}}</h1>
 
+      <p>You have {{quantityInCart}} of this item in your cart</p>
+
       <div class="mt-4 flex items-center gap-4">
         <p class="text-3xl font-extrabold text-gray-900">
           {{product.price | currency:'HUF':'symbol':'1.0-0'}}
@@ -15,14 +17,15 @@
       </div>
 
       <div class="flex flex-col sm:flex-row gap-4 mt-6 w-full">
-        <button mat-flat-button class="matyh-input-height flex items-center justify-center gap-2 w-full sm:w-auto">
+        <button [disabled]="quantity === quantityInCart || quantity < 1" mat-flat-button class="matyh-input-height flex items-center justify-center gap-2 w-full sm:w-auto"
+        (click)="updateCart()">
           <mat-icon>shopping_cart</mat-icon>
-          Add to Cart
+          {{getButtontext()}}
         </button>
 
         <mat-form-field appearance="outline" class="flex w-full sm:w-auto">
           <mat-label>Quantity</mat-label>
-          <input matInput type="number" min="1" value="1">
+          <input matInput type="number" min="0" [(ngModel)]="quantity">
         </mat-form-field>
       </div>
 
