--- a/client/src/app/features/shop/product-item/product-item.component.html
+++ b/client/src/app/features/shop/product-item/product-item.component.html
@@ -14,11 +14,13 @@
             <p class="text-gray-600 font-light mt-1">{{ product.price | currency:'HUF':'symbol':'1.0-0' }}</p>
         </mat-card-content>
 
-        <mat-card-actions class="mt-3">
+        <mat-card-actions class="mt-3" (click)="$event.stopPropagation()">
             <button
             mat-stroked-button
             color="primary"
-            class="w-full flex justify-center items-center gap-2">
+            class="w-full flex justify-center items-center gap-2"
+            (click)="cartService.addItemToCart(product)"
+            >
             <mat-icon>add_shopping_cart</mat-icon>
             Add to cart
             </button>
