--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -9,11 +9,10 @@
         </nav>
 
         <div class="flex gap-3 align-middle">
-            <a matBadge="5" matBadgeSize="large" class="custom-badge mt-2 mr-2">
+            <a routerLink="/cart" routerLinkActive="active" matBadge={{cartService.itemCount()}} matBadgeSize="large" class="custom-badge mt-2 mr-2">
                 <mat-icon>shopping_cart</mat-icon>
             </a>
-            <button mat-stroked-button>Login</button>
-            <button mat-stroked-button>Register</button>
+            <button mat-stroked-button routerLink="/login">Login</button>
         </div>
     </div>
 </header>
